<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_chooselocation_id"
            android:icon="@drawable/ic_menu_store"
            android:title="@string/nav_chooselocation_string" />
        <item
            android:id="@+id/nav_prevreports_id"
            android:icon="@drawable/ic_menu_prevreports"
            android:title="@string/nav_prevreports_string" />
        <item
            android:id="@+id/nav_moreinfo_id"
            android:icon="@drawable/ic_menu_web"
            android:title="@string/nav_moreinfo_string" />
        <item
            android:id="@+id/nav_settings_id"
            android:icon="@drawable/ic_menu_setting"
            android:title="@string/nav_settings_string" />
        <item
            android:id="@+id/nav_signout_id"
            android:title="Sign Out" />
    </group>

</menu>
