<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.binitshah.hb141.OnboardingFragment"
    android:padding="16dp">

    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/onboarding_page1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/onboarding_page1Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="WELCOME TO HB141"
            android:textSize="60sp"
            android:lineSpacingExtra="-30dp"
            android:textColor="@color/colorOnboarding1"
            android:paddingBottom="16dp"
            android:textAlignment="center"
            android:layout_centerHorizontal="true" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_below="@+id/onboarding_page1Title"
            android:layout_above="@+id/navigation_placeHolder1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/logos"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:src="@drawable/twologos"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/image_descrip_logo" />

                <TextView
                    android:id="@+id/thankyoumessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Thank you for your help in preventing human trafficking."
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:layout_below="@+id/logos"/>

            </RelativeLayout>

        </ScrollView>

        <View
            android:id="@+id/navigation_placeHolder1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/onboarding_page2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/onboarding_page2Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="HUMAN TRAFFICKING"
            android:textSize="40sp"
            android:lineSpacingExtra="-20dp"
            android:textColor="@color/colorOnboarding2"
            android:paddingBottom="16dp"
            android:layout_marginStart="16dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/onboarding_page2Title"
            android:layout_above="@+id/navigation_placeHolder2">

            <TextView
                android:id="@+id/onboarding_page2Content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/body_page2"
                android:fontFamily="sans-serif-condensed"
                android:textSize="20sp"
                android:lineSpacingExtra="-10dp"
                android:textColor="@android:color/white"/>

        </ScrollView>

        <View
            android:id="@+id/navigation_placeHolder2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/onboarding_page3"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/onboarding_page3Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ESTIMATES"
            android:textSize="40sp"
            android:lineSpacingExtra="-20dp"
            android:textColor="@color/colorOnboarding3"
            android:paddingBottom="16dp"
            android:layout_marginStart="16dp"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/onboarding_page3Title"
            android:layout_above="@+id/navigation_placeHolder3">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:id="@+id/onboarding_page3Subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="THE INTERNATIONAL LABOUR ORGANIZATION ESTIMATES:"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="20sp"
                    android:lineSpacingExtra="-10dp"
                    android:textColor="@android:color/white"/>

                <TextView
                    android:id="@+id/onboarding_page3StatNum1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-25dp"
                    android:text="20.9"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="50sp"
                    android:lineSpacingExtra="-25dp"
                    android:textColor="@android:color/white"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/onboarding_page3Subtitle"/>

                <TextView
                    android:id="@+id/onboarding_page3Stat1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="million victims of human trafficking globally."
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="20sp"
                    android:lineSpacingExtra="-10dp"
                    android:textColor="@android:color/white"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_horizontal"
                    android:layout_below="@+id/onboarding_page3StatNum1"
                    android:layout_marginTop="-30dp"/>

                <TextView
                    android:id="@+id/onboarding_page3StatNum2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-20dp"
                    android:text="68%"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="50sp"
                    android:lineSpacingExtra="-25dp"
                    android:textColor="@android:color/white"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/onboarding_page3Stat1"/>

                <TextView
                    android:id="@+id/onboarding_page3Stat2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="of them are trapped in forced labour."
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="20sp"
                    android:lineSpacingExtra="-10dp"
                    android:textColor="@android:color/white"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_horizontal"
                    android:layout_below="@+id/onboarding_page3StatNum2"
                    android:layout_marginTop="-30dp"/>

                <TextView
                    android:id="@+id/onboarding_page3StatNum3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-20dp"
                    android:text="26%"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="50sp"
                    android:lineSpacingExtra="-25dp"
                    android:textColor="@android:color/white"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/onboarding_page3Stat2"/>

                <TextView
                    android:id="@+id/onboarding_page3Stat3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="of them are children."
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="20sp"
                    android:lineSpacingExtra="-10dp"
                    android:textColor="@android:color/white"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_horizontal"
                    android:layout_below="@+id/onboarding_page3StatNum3"
                    android:layout_marginTop="-30dp" />

                <TextView
                    android:id="@+id/onboarding_page3StatNum4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-20dp"
                    android:text="55%"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="50sp"
                    android:lineSpacingExtra="-25dp"
                    android:textColor="@android:color/white"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/onboarding_page3Stat3"/>

                <TextView
                    android:id="@+id/onboarding_page3Stat4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="are women and girls."
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="20sp"
                    android:lineSpacingExtra="-10dp"
                    android:textColor="@android:color/white"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_horizontal"
                    android:layout_below="@+id/onboarding_page3StatNum4"
                    android:layout_marginTop="-30dp" />

            </RelativeLayout>

        </ScrollView>

        <View
            android:id="@+id/navigation_placeHolder3"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/onboarding_page4"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/onboarding_page4Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="HOW WE CAN HELP"
            android:textSize="40sp"
            android:lineSpacingExtra="-20dp"
            android:textColor="@color/colorOnboarding4"
            android:paddingBottom="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="60dp"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/onboarding_page4Title"
            android:layout_above="@+id/navigation_placeHolder4">

            <TextView
                android:id="@+id/onboarding_page4Content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/body_page4"
                android:fontFamily="sans-serif-condensed"
                android:textSize="20sp"
                android:lineSpacingExtra="-10dp"
                android:textColor="@android:color/white"/>

        </ScrollView>

        <View
            android:id="@+id/navigation_placeHolder4"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/onboarding_page5"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/onboarding_page5Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="HOW IT WORKS"
            android:textSize="30sp"
            android:lineSpacingExtra="-15dp"
            android:textColor="@color/colorOnboarding5"
            android:paddingBottom="16dp"
            android:layout_marginStart="16dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/onboarding_page5Title"
            android:layout_above="@+id/navigation_placeHolder5">

            <TextView
                android:id="@+id/onboarding_page5Content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/body_page5"
                android:fontFamily="sans-serif-condensed"
                android:textSize="20sp"
                android:lineSpacingExtra="-10dp"
                android:textColor="@android:color/white"/>

        </ScrollView>

        <View
            android:id="@+id/navigation_placeHolder5"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>

</RelativeLayout>